[package]
name = "pomodoro-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
chrono = "0.4.6"
clap = "2.33.0" # argument parsing
termion = "1.5.1"
ctrlc = "3.1.1"
# parsing durations
humantime = "1.2.0"